// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
<div
  class="wp-components-surface css-i80rlg"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderLeft 1`] = `
<div
  class="wp-components-surface css-1o7gfmm"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderRight 1`] = `
<div
  class="wp-components-surface css-f4vuds"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderTop 1`] = `
<div
  class="wp-components-surface css-16wskog"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borders 1`] = `
<div
  class="wp-components-surface css-6bpd8y"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-surface css-9yqr3x"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render variants 1`] = `
<div
  class="wp-components-surface css-13i0m8g"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;
